--- a/Project/VisualStudio/LiongPlus.vcxproj.filters
+++ b/Project/VisualStudio/LiongPlus.vcxproj.filters
@@ -157,6 +157,15 @@
     <ClInclude Include="..\..\Include\Net\Socket.hpp">
       <Filter>Include\Net</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Include\IObservable.hpp">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Include\IObserver.hpp">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Include\Lazy.hpp">
+      <Filter>Include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Include\Graphics\Texture.cpp">
