--- a/Project/VisualStudio/LiongPlus.vcxproj.filters
+++ b/Project/VisualStudio/LiongPlus.vcxproj.filters
@@ -166,6 +166,9 @@
     <ClInclude Include="..\..\Include\Lazy.hpp">
       <Filter>Include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Include\Collections\LinkedList.hpp">
+      <Filter>Include\Collections</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Include\Graphics\Texture.cpp">
