--- a/Project/VisualStudio/LiongPlus.vcxproj.filters
+++ b/Project/VisualStudio/LiongPlus.vcxproj.filters
@@ -169,6 +169,9 @@
     <ClInclude Include="..\..\Include\Collections\LinkedList.hpp">
       <Filter>Include\Collections</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Include\Text\StringFormatter.hpp">
+      <Filter>Include\Text</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Include\Graphics\Texture.cpp">
@@ -221,6 +224,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Include\Net\Socket.cpp">
       <Filter>Source\Net</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Include\Text\StringFormatter.cpp">
+      <Filter>Source\Text</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
