Added fantastic Tuple<T>
Added override for all value types in Console
Added Memexch to exchange the values in two buffers in Buffer

--- a/Project/VisualStudio/LiongPlus.vcxproj
+++ b/Project/VisualStudio/LiongPlus.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="..\..\Include\Collections\IList.hpp" />
     <ClInclude Include="..\..\Include\Collections\LinkedList.hpp" />
     <ClInclude Include="..\..\Include\Collections\List.hpp" />
+    <ClInclude Include="..\..\Include\Collections\Tuple.hpp" />
     <ClInclude Include="..\..\Include\Console.hpp" />
     <ClInclude Include="..\..\Include\DateTime.hpp" />
     <ClInclude Include="..\..\Include\Delegate.hpp" />
