--- a/Project/VisualStudio/LiongPlus.vcxproj.filters
+++ b/Project/VisualStudio/LiongPlus.vcxproj.filters
@@ -172,6 +172,9 @@
     <ClInclude Include="..\..\Include\Text\StringFormatter.hpp">
       <Filter>Include\Text</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Include\Collections\Tuple.hpp">
+      <Filter>Include\Collections</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Include\Graphics\Texture.cpp">
