Finished without Much Debugging

--- a/Project/VisualStudio/LiongPlus.vcxproj
+++ b/Project/VisualStudio/LiongPlus.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="..\..\Include\Media\Bmp.hpp" />
     <ClInclude Include="..\..\Include\Media\Image.hpp" />
     <ClInclude Include="..\..\Include\Net\Dns.hpp" />
+    <ClInclude Include="..\..\Include\Net\HttpBufferPool.hpp" />
     <ClInclude Include="..\..\Include\Net\HttpUtils.hpp" />
     <ClInclude Include="..\..\Include\Net\HttpClient.hpp" />
     <ClInclude Include="..\..\Include\Net\HttpMessage.hpp" />
@@ -54,7 +55,10 @@
     <ClCompile Include="..\..\Include\Media\Bitmap.cpp" />
     <ClCompile Include="..\..\Include\Media\Bmp.cpp" />
     <ClCompile Include="..\..\Include\Media\Image.cpp" />
+    <ClCompile Include="..\..\Include\Net\HttpBufferPool.cpp" />
+    <ClCompile Include="..\..\Include\Net\HttpClient.cpp" />
     <ClCompile Include="..\..\Include\Net\HttpMessage.cpp" />
+    <ClCompile Include="..\..\Include\Net\HttpUtils.cpp" />
     <ClCompile Include="..\..\Include\Net\Socket.cpp" />
     <ClCompile Include="..\..\Include\Net\SocketAddress.cpp" />
     <ClCompile Include="..\..\Include\source.cpp" />
